# ssm

./: .cursrorules  .dockerignore  .envrc  .gitignore  .htpasswd  .htpasswd.example  .windsurfrules  Cargo.toml  Dockerfile  README.md  TODO.txt  build.rs  convert_ssh_config.py  flake.nix  start.sh
.cursor/rules/: my-custom-rule.mdc
.github/workflows/: docker-publish.yml  github-publish.ymll
migrations/2024-06-20-111844_create_database/: down.sql  up.sql
migrations/2024-12-30-001554_allow_null_key_fingerprint/: down.sql  up.sql
migrations/2025-01-13-102408_rename_user_on_host/: down.sql  up.sql
src/: db.rs  forms.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs  script.sh  sshclient.rs  templates.rs
src/db/: host.rs  key.rs  mod.rs  user.rs
src/routes/: auth.rs  diff.rs  hosts.rs  keys.rs  mod.rs  users.rs
src/ssh/: caching_client.rs  mod.rs  script.sh  sshclient.rs
static/: forms.js  style.css
templates/: 404.html  base.html  components.html  error.html  index.html
templates/auth/: login.html  status.html
templates/components/: authorizedkey.htm  macros.html
templates/diff/: assign_key_dialog.htm  authorize_user_dialog.htm  diff.htm  index.html  show_diff.html
templates/forms/: delete_user_dialog.html  form_response.html  remove_key_dialog.html
templates/hosts/: authorized_keyfile_dialog.htm  delete_dialog.htm  edit_host.html  hostkey_dialog.htm  index.html  list.htm  logins.htm  show_host.html
templates/keys/: delete_key_dialog.htm  index.html
templates/pages/: 404.html  diff.html  hosts.html  keys.html  show_diff.html  show_host.html  show_user.html  users.html
templates/render/: add_host.html  add_user.html  delete_user.html  diff.html  error.html  form_response.html  host_hostkey_response.html  list_hosts.html  list_keys.html  list_users.html
templates/users/: index.html  list.htm  list_authorizations.htm  list_keys.htm  show_user.html
