[package]
authors = ["Jeidnx <jeidnx@domainhier.de>"]
edition = "2021"
name = "ssh-key-manager"
version = "0.0.1-alpha"
description = "Manage all your ssh keys from one interface"
repository = "https://github.com/styliteag/ssh-key-manager"
readme = "README.md"

[features]
postgres = [ "diesel/postgres", "diesel_migrations/postgres"]
mysql = [ "diesel/mysql", "diesel_migrations/mysql"]

[dependencies]
actix = "0.13.3"
actix-files = "0.6.6"
actix-web = "4.7.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
async-trait = "0.1.81"
color-eyre = { version = "0.6.3", default-features = false }
config = { version = "0.14.0", default-features = false, features = [ "toml" ] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
russh = "0.44.0"
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
