[package]
authors = ["Jeidnx <jeidnx@domainhier.de>"]
edition = "2021"
name = "ssm"
version = "0.0.1-alpha"
description = "Manage your ssh keys from a simple Web UI"
keywords = ["ssh"]
repository = "https://github.com/styliteag/ssm"
readme = "README.md"
license = "GPL-3.0"

[features]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

[dependencies]
actix = "0.13.3"
actix-web = "4.7.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
async-trait = "0.1.81"
color-eyre = { version = "0.6.3", default-features = false }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
russh = "0.45.0"
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
ssh-key = { version = "0.6.6", features = ["alloc", "ed25519", "serde"] }
ssh-encoding = { version = "0.2.0", features = ["alloc", "base64", "std"] }

[build-dependencies]
static-files = "0.2.1"

